--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         type="text/css">
     <title>Haitham's C.V</title>
     <style>
-        body{
+        body {
             padding-bottom: 100px;
         }
-        .nes-progress{
+
+        .nes-progress {
             height: 25px;
         }
     </style>
@@ -34,12 +35,12 @@
     <div class="container" style="margin-bottom: 50px;">
         <div class="row">
             <div class="col">
-                <i class="nes-bcrikko""></i>
+                <i class="nes-bcrikko"></i>
             </div>
             <div class=" col-sm-9 col-xs-12">
-                    <div class="nes-balloon from-left">
-                        <p>Hi I'm Haitham. This is everthing about me <i class="nes-icon is-small heart"></i> </p>
-                    </div>
+                <div class="nes-balloon from-left">
+                    <p>Hi I'm Haitham. This is everthing about me <i class="nes-icon is-small heart"></i> </p>
+                </div>
             </div>
 
         </div>
@@ -141,7 +142,7 @@
                     </div>
                 </div>
 
-                <div class="nes-container with-title"style="margin-top: 40px; margin-bottom: 50px;">
+                <div class="nes-container with-title" style="margin-top: 40px; margin-bottom: 50px;">
                     <h3 class="title">Build Tools</h3>
                     <div class="row">
                         <div class="col-sm-4 col-xs-12">Git</div>
@@ -162,7 +163,7 @@
                     </div>
                 </div>
 
-                <h3 class="topic-title"style="margin-top: 40px;">
+                <h3 class="topic-title" style="margin-top: 40px;">
                     <i class="nes-icon star"></i> Previous Experience
                 </h3>
                 <div class="nes-container is-dark">
